<resources>
    <string name="app_name">practis</string>
    <string name="text1">Quick Delivery At Your \nDoorstep</string>
    <string name="text2">Enjoy quick pick-up and delivery to \nyour destination</string>
    <string name="text3">Flexible Payment</string>
    <string name="text4">Different modes of payment either \nbefore and after delivery without \nstress</string>
    <string name="text5">Real-time Tracking</string>
    <string name="text6">Track your packages/items from the \ncomfort of your home till final destination</string>
    <string name="text7">Already have an account?</string>
    <string name="text8">Sign in</string>
    <string name="text9">Create an account</string>
    <string name="text10">Complete the sign up process to get started</string>
    <string name="text11">Full name</string>
    <string name="text12">Phone Number</string>
    <string name="text13">Email Address</string>
    <string name="text14">Password</string>
    <string name="text15">Confirm Password</string>
    <string name="text16">By ticking this box, you agree to our Terms and \nconditions and private policy</string>
    <string name="text17">or sign in using</string>
    <string name="text19">Welcome Back</string>
    <string name="text20">Fill in your email and password to continue</string>
    <string name="text21">Remember password</string>
    <string name="text22">Forgot Password?</string>
    <string name="mail_com">***********@mail.com</string>
    <string name="pass">**********</string>
    <string name="log_in">Log in</string>
    <string name="sing_up">Sing Up</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="_7_999_999_99_99">+7(999)999-99-99</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="sing_otp">Send OTP</string>
    <string name="forgot">Forgot Password</string>
    <string name="enter">Enter your email address</string>
    <string name="remember">Remember password? Back to</string>
    <string name="verification">OTP Verification</string>
    <string name="numbers_sent_to_your_email">Enter the 6 digit numbers sent to your email</string>
    <string name="code">If you didn’t receive code, resend after 1:00</string>
    <string name="set">Set New Password</string>
    <string name="password">New Password</string>
    <string name="new_password">Enter new password</string>
    <string name="home">Home</string>
</resources>