<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textColor="@color/black"
            android:layout_marginStart="-106dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:layout_marginStart="-102dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/grey1"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-136dp"
            android:layout_marginTop="25dp"
            android:text="@string/text13"
            android:textColor="@color/grey1"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:hint="@string/mail_com"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border3"
            android:onClick="onNexts"
            android:text="@string/sing_otp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="55dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textColor="@color/grey1"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/sing_up"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:textStyle="bold"
                android:onClick="onNext"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>