<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".New">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="120dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_marginStart="-117dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:layout_marginStart="-120dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/grey1"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-153dp"
            android:layout_marginTop="45dp"
            android:text="@string/text14"
            android:textColor="@color/grey1"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:hint="@string/pass"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-124dp"
            android:layout_marginTop="25dp"
            android:text="@string/text15"
            android:textColor="@color/grey1"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:hint="@string/pass"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border3"
            android:onClick="onNexts"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

</ScrollView>