<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text9"
            android:textColor="@color/black"
            android:layout_marginLeft="-102dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text10"
            android:layout_marginLeft="-46dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/grey1"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-136dp"
            android:layout_marginTop="25dp"
            android:text="@string/text13"
            android:textColor="@color/grey1"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:hint="***********@mail.com"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-153dp"
            android:layout_marginTop="25dp"
            android:text="@string/text14"
            android:textColor="@color/grey1"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:hint="**********"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="13dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/text16"
                android:textColor="@color/grey1"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border3"
            android:onClick="onNexts"
            android:text="Log in"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text7"
                android:textColor="@color/grey1"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/text8"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text17"
            android:textColor="@color/grey1"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/fill" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>