<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/rafiki"
            android:paddingTop="43dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_marginTop="53dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text4"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:layout_marginStart="24dp"
                android:textColor="@color/blue"
                android:background="@drawable/border"
                android:layout_marginTop="95dp"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="182dp"
                android:text="@string/next"
                android:background="@drawable/border2"
                android:onClick="onNext"
                android:textColor="@color/white"
                android:layout_marginTop="95dp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>