<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textColor="@color/black"
            android:layout_marginStart="-110dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-46dp"
            android:layout_marginTop="10dp"
            android:text="@string/numbers_sent_to_your_email"
            android:textColor="@color/grey1"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="394dp"
            android:layout_height="62dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/number1"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom1"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/number2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom1"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/number3"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom1"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/number4"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom1"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/number5"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom1"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/number6"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom1"
                android:padding="10dp"
                android:textSize="14sp" />
        </LinearLayout>


            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/code"
                android:textColor="@color/grey1"
                android:textSize="14sp"
                android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="87dp"
            android:background="@drawable/border3"
            android:onClick="onNexts"
            android:text="@string/set"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>